--- a/test.html
+++ b/test.html
@@ -98,6 +98,9 @@
             color: #000;
             padding: 50px 20px;
             text-align: center;
+            border: 2px solid #000;
+            border-radius: 10px;
+            margin-top: 20px;
         }
         .content-section-inner {
             padding: 20px;
@@ -167,7 +170,7 @@
     <p>
      Lập trình máy tính, hay thường gọi là viết code, là một quá trình nghệ thuật và khoa học đã phát triển qua nhiều thập kỷ. Từ những ngày đầu của ngôn ngữ máy mã cho đến các hệ thống AI hiện đại, mỗi bước tiến đánh dấu một bước ngoặt trong việc hiểu và khai thác khả năng của máy tính.
     </p>
-    <a class="contribute-btn" href="#">
+    <a class="contribute-btn" href="https://github.com/theconquers/code.history/blob/main/test.html">
      <i class="fab fa-github">
      </i>
      Contribute
@@ -226,7 +229,7 @@ public class HelloWorld {
      <i class="fas fa-plus-circle plus-icon" onclick="toggleImage('hiddenImage1')">
      </i>
     </h2>
-    <img alt="Historical image of early computer programming" class="hidden-image" height="400" id="hiddenImage1" src="https://storage.googleapis.com/a1aa/image/CjPTi5DRKk7fcidercOdeP0Y7iDSgiVLAeeV6eC4ecqNhfiCUA.jpg" width="600"/>
+    <img alt="Historical image of early computer programming" class="hidden-image" height="400" id="hiddenImage1" src="https://storage.googleapis.com/a1aa/image/PB7H1uNNyzZACZiXrkvu9SsYagQKfzcZWDhbuEaluQ8JNwBKA.jpg" width="600"/>
     <p>
      Vào những năm 1940, các chương trình đầu tiên được viết trên ngôn ngữ máy mã (machine code), dùng hệ nhị phân (binary) để gây ra tổ hợp các thao tác trên máy tính. Việc viết code thời điểm này rất khó khăn vì tất cả đều phải thao tác trực tiếp với phần cứng.
     </p>
@@ -235,7 +238,7 @@ public class HelloWorld {
      <i class="fas fa-plus-circle plus-icon" onclick="toggleImage('hiddenImage2')">
      </i>
     </h2>
-    <img alt="Historical image of assembly language programming" class="hidden-image" height="400" id="hiddenImage2" src="https://storage.googleapis.com/a1aa/image/2DVFmwX2SZbQGtOnQu99JrdperffaaXZzuhfMvY7u1En8LKQB.jpg" width="600"/>
+    <img alt="Historical image of assembly language programming" class="hidden-image" height="400" id="hiddenImage2" src="https://storage.googleapis.com/a1aa/image/7H1TbeoJEjXUQCnl02PvOsWqGF4WW7BK6oSgZNe17n5aagDUA.jpg" width="600"/>
     <p>
      Vào cuối thập niên 1940, ngôn ngữ Assembly xuất hiện như một cải tiến. Assembly cho phép người dùng viết các câu lệnh đơn giản hơn, thay thế các chuỗi nhị phân bằng các từ khóa gần gũi với ngôn ngữ con người.
     </p>
@@ -244,7 +247,7 @@ public class HelloWorld {
      <i class="fas fa-plus-circle plus-icon" onclick="toggleImage('hiddenImage3')">
      </i>
     </h2>
-    <img alt="Historical image of high-level programming languages" class="hidden-image" height="400" id="hiddenImage3" src="https://storage.googleapis.com/a1aa/image/CbRPQveLG2SGGygt4z8ovBN1vbL7mDmpMEem1XYakflOeLKQB.jpg" width="600"/>
+    <img alt="Historical image of high-level programming languages" class="hidden-image" height="400" id="hiddenImage3" src="https://storage.googleapis.com/a1aa/image/yde5SJzrrR2WKSjefJf2LaGezrNydrcnumN5f92gyajKmG4AF.jpg" width="600"/>
     <p>
      Thập kỷ 1950 đã chứng kiến sự ra đời của các ngôn ngữ lập trình cấp cao như FORTRAN và COBOL. Những ngôn ngữ này giúp đơn giản hoá việc lập trình, cho phép người dùng tập trung vào giải quyết bài toán thay vì quan tâm đến các chi tiết kỹ thuật.
     </p>
@@ -253,7 +256,7 @@ public class HelloWorld {
      <i class="fas fa-plus-circle plus-icon" onclick="toggleImage('hiddenImage4')">
      </i>
     </h2>
-    <img alt="Historical image of object-oriented programming" class="hidden-image" height="400" id="hiddenImage4" src="https://storage.googleapis.com/a1aa/image/UYrEsiaLRdqgOxEj37asgQN2v9TtLOE9w4xVrCj2TPbwvoAF.jpg" width="600"/>
+    <img alt="Historical image of object-oriented programming" class="hidden-image" height="400" id="hiddenImage4" src="https://storage.googleapis.com/a1aa/image/V2HxDqtZjfzmS6mYXZqwIwqcRfmNIeTXRbSrefrN9WeZkG4AF.jpg" width="600"/>
     <p>
      Thập kỷ 1980 đã đặt nền móng cho sự phát triển của ngôn ngữ hướng đối tượng (OOP) như C++ và Java. OOP giúp tổ chức code thành các “đối tượng”, gần gũi hơn với tư duy của con người, từ đó tăng tính tái sử dụng và dễ bảo trì.
     </p>
@@ -262,7 +265,7 @@ public class HelloWorld {
      <i class="fas fa-plus-circle plus-icon" onclick="toggleImage('hiddenImage5')">
      </i>
     </h2>
-    <img alt="Historical image of web and mobile programming" class="hidden-image" height="400" id="hiddenImage5" src="https://storage.googleapis.com/a1aa/image/oy4NoHVQfD2ADScCZzej8HAxjfa9HzfY99gRfm11hHM04XUgC.jpg" width="600"/>
+    <img alt="Historical image of web and mobile programming" class="hidden-image" height="400" id="hiddenImage5" src="https://storage.googleapis.com/a1aa/image/c5ZICevfMVvelo8lvzxxDj1WvKKZdmMp8DNWSzRafaMYpBOQB.jpg" width="600"/>
     <p>
      Thập kỷ 1990 và 2000 chứng kiến sự bùng nổ của web và các thiết bị di động. Các ngôn ngữ như JavaScript, PHP và Python trở thành công cụ hữu hiệu đối với các nhà phát triển web. Song song, các ngôn ngữ như Swift và Kotlin trở thành chuẩn mực cho lập trình di động.
     </p>
@@ -271,7 +274,7 @@ public class HelloWorld {
      <i class="fas fa-plus-circle plus-icon" onclick="toggleImage('hiddenImage6')">
      </i>
     </h2>
-    <img alt="Historical image of AI in programming" class="hidden-image" height="400" id="hiddenImage6" src="https://storage.googleapis.com/a1aa/image/lemzp3CknHVNDSTX9jsbH8v1aTbynip5COP8v7WfBZBEfFFoA.jpg" width="600"/>
+    <img alt="Historical image of AI in programming" class="hidden-image" height="400" id="hiddenImage6" src="https://storage.googleapis.com/a1aa/image/VGP7w5wa9nYkPdloGePmbx6nwutsfSXpXVZpoeHeSTdTpBOQB.jpg" width="600"/>
     <p>
      Hiện nay, AI đang thay đổi toàn bộ cách lập trình và phát triển phần mềm. Các công cụ lập trình AI như GitHub Copilot và ChatGPT hỗ trợ tự động hóa việc viết code, kiểm tra lỗi, và tối ưu hóa hiệu suất. Các ngôn ngữ như Python, với thư viện mạnh mẽ về học máy (machine learning) và trí tuệ nhân tạo, đã trở thành tâm điểm trong ngành công nghiệp.
     </p>
